<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>

        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />

    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->

    <!--
    An alternative would be to use Coordinator layout with collapsing toolbar
    -->

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/fm_representative_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/scene_representative"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cly_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/search_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/add_line_one"
            android:hint="@string/add_line_one"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address_line_1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />
        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints="@string/add_line_two"
            android:hint="@string/add_line_two"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address_line_2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />
        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/city"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />
        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:entries="@array/states"
            android:selectedItemPosition="@={viewModel.itemPosition }"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            app:stateValue="@{viewModel.state}"
             />
        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/zip"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />
        <Button
            android:id="@+id/button_search"
            style="@style/BtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_representatives"
            app:layout_constraintTop_toBottomOf="@id/zip" />
        <Button
            android:id="@+id/button_location"
            style="@style/BtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_my_loc"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/representative_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cly_form"
             />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_representatives"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/representative_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:list_data="@layout/item_representative" />

    <TextView
        android:id="@+id/list_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_result"
        android:textAlignment="center"
        android:visibility="@{viewModel.showNoResult?View.VISIBLE:View.GONE}"
        app:layout_constraintStart_toStartOf="@id/rv_my_representatives"
        app:layout_constraintEnd_toEndOf="@id/rv_my_representatives"
        app:layout_constraintTop_toTopOf="@id/rv_my_representatives"
        app:layout_constraintBottom_toBottomOf="@id/rv_my_representatives"
        motion:visibilityMode="ignore" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.showLoadingSpinner.booleanValue()?View.VISIBLE:View.GONE}"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/rv_my_representatives"
            app:layout_constraintEnd_toEndOf="@id/rv_my_representatives"
            app:layout_constraintTop_toTopOf="@id/rv_my_representatives"
            app:layout_constraintBottom_toBottomOf="@id/rv_my_representatives" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
    </layout>

<!--
app:zip_code="@{viewModel.state}"
-->